fixed weird spacing bug

--- a/skietbaan_fe/src/components/NotificationsStyle.css
+++ b/skietbaan_fe/src/components/NotificationsStyle.css
@@ -494,7 +494,6 @@
     font-family: helvetica;
     font-size: 14px;
     padding-top: 9px;
-    padding-right: 45px;
     width: 100%;
   }
 
